// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`folder request --k6-request-tagging=folder-request 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";
import { group } from "k6";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  group("TestFolder", function() {
    postman[Request]({
      name: "TestRequest",
      method: "GET",
      address: "http://example.com/",
      tags: { name: "TestFolder - TestRequest" },
      auth(config, Var) {
        config.headers.Authorization = "Bearer token";
      }
    });
  });
}
"
`;

exports[`folder request --k6-request-tagging=request 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";
import { group } from "k6";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  group("TestFolder", function() {
    postman[Request]({
      name: "TestRequest",
      method: "GET",
      address: "http://example.com/",
      tags: { name: "TestRequest" },
      auth(config, Var) {
        config.headers.Authorization = "Bearer token";
      }
    });
  });
}
"
`;

exports[`folder request no request-tagging 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";
import { group } from "k6";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  group("TestFolder", function() {
    postman[Request]({
      name: "TestRequest",
      method: "GET",
      address: "http://example.com/",
      auth(config, Var) {
        config.headers.Authorization = "Bearer token";
      }
    });
  });
}
"
`;

exports[`folder request separate --k6-request-tagging=folder-request 1`] = `
{
  "TestFolder": {
    "TestRequest.js": "postman[Symbol.for("define")]({
  name: "TestRequest",
  method: "GET",
  address: "http://example.com/",
  tags: { name: "TestFolder - TestRequest" },
  auth(config, Var) {
    config.headers.Authorization = "Bearer token";
  }
});
",
  },
}
`;

exports[`folder request separate --k6-request-tagging=request 1`] = `
{
  "TestFolder": {
    "TestRequest.js": "postman[Symbol.for("define")]({
  name: "TestRequest",
  method: "GET",
  address: "http://example.com/",
  tags: { name: "TestRequest" },
  auth(config, Var) {
    config.headers.Authorization = "Bearer token";
  }
});
",
  },
}
`;

exports[`folder request separate no request-tagging 1`] = `
{
  "TestFolder": {
    "TestRequest.js": "postman[Symbol.for("define")]({
  name: "TestRequest",
  method: "GET",
  address: "http://example.com/",
  auth(config, Var) {
    config.headers.Authorization = "Bearer token";
  }
});
",
  },
}
`;

exports[`request --k6-request-tagging=folder-request 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]({
    name: "TestRequest",
    method: "GET",
    address: "http://example.com/",
    tags: { name: "null - TestRequest" }
  });
}
"
`;

exports[`request --k6-request-tagging=request 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]({
    name: "TestRequest",
    method: "GET",
    address: "http://example.com/",
    tags: { name: "TestRequest" }
  });
}
"
`;

exports[`request no request-tagging 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]({
    name: "TestRequest",
    method: "GET",
    address: "http://example.com/"
  });
}
"
`;

exports[`request separate --k6-request-tagging=folder-request 1`] = `
{
  "TestRequest.js": "postman[Symbol.for("define")]({
  name: "TestRequest",
  method: "GET",
  address: "http://example.com/",
  tags: { name: "null - TestRequest" }
});
",
}
`;

exports[`request separate --k6-request-tagging=request 1`] = `
{
  "TestRequest.js": "postman[Symbol.for("define")]({
  name: "TestRequest",
  method: "GET",
  address: "http://example.com/",
  tags: { name: "TestRequest" }
});
",
}
`;

exports[`request separate no request-tagging 1`] = `
{
  "TestRequest.js": "postman[Symbol.for("define")]({
  name: "TestRequest",
  method: "GET",
  address: "http://example.com/"
});
",
}
`;
